--- a/HTML/Websites/Info/Minecraft/Minecraft-Info-Home.html
+++ b/HTML/Websites/Info/Minecraft/Minecraft-Info-Home.html
@@ -7,6 +7,7 @@
   <h3 style="text-align:center">Welcome to this Minecraft info page!</h3>
   <ul>
    <li>IDs</li>
+   <li>Biomes</li>
    <li>Servers - PE</li>
    <li>Servers - PC</li>
   </ul>
